# ojibwe-dict-app

./: .gitignore  Cargo.toml  README.md  TODO  app.html  build.sh  index.html  main.js  netlify.toml  style.css  worker.js
data/: conjugations.tsv  dictionary.tsv  grammar-abbrev.tsv  phonotactics.tsv
js/: lit-html.min.js  main.js  worker.js
src/: dictentry.rs  fiero.rs  lib.rs  utils.rs
src/fiero/: syllabics.rs
