[package]
name = "ojibwe-dictsearch"
version = "0.1.0"
authors = ["George Steel"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.37"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "console"
]